// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message TopicMapInfo {
  // topic_map is the kv.Entity that identifies this topic map.
  uint64 topic_map = 1;

  // modified_unix_seconds is the time this topic map was last modified, in
  // seconds since the Unix epoch.
  int64 modified_unix_seconds = 2;

  // in_trash is true if and only if this topic map has been moved to the trash
  // bin. If true, then modified_unix_seconds is also the time that this topic
  // map was deleted.
  bool in_trash = 3;
}

message TopicRefList {
  repeated string item_identifiers = 1;
  repeated string subject_indicators = 2;
  repeated string subject_locators = 3;
}

message Name {
  uint64 topic = 1;
  string value = 2;
}

message Occurrence {
  uint64 topic = 1;
  string value = 2;
}
